--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.3.2
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.1
-Psycopg2-binary==2.9.6
-pandas==1.5.3
-numpy==1.23.5
-joblib==1.2.0
-Werkzeug==2.3.2
-pytz>=2020.1,<2024
-gunicorn==23.0.0
+Flask
+Flask-SQLAlchemy
+Flask-WTF
+Psycopg2-binary
+pandas
+numpy
+joblib
+Werkzeug
+pytz
+gunicorn
